--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,9 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
 set(SOURCE
 	main.cpp
-	WavFile.cpp
+	WavFileSoundStream.cpp
 	LinuxPlaybackDevice.cpp
+	SimpleDeck.cpp
 )	
 
 add_executable(${PROJECT_NAME} ${SOURCE})
